--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="action_settings">Settings</string>
     <string name="placeholder">Placeholder</string>
     <string name="placeholder_caps">PLACEHOLDER</string>
+    <string name="filter">Filter</string>
 
     <string name="unit_internet">Internet</string>
     <string name="units_title_text">UNITS</string>
