Working w/Broken SEIs
App is now almost at build 1.0 as all is working except sorting through
cards by SEIs.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,9 @@
         Vestibulum congue, nisi sed eleifend sodales, enim nisl aliquet erat, id placerat metus lorem nec erat. Aenean
         mattis dui neque, non efficitur quam sagittis ut.
     </string>
+    <string name="headingOne">Categories</string>
+    <string name="headingSEI">SEIs</string>
+    <string name="placeholder">placeholder</string>
 
 
 </resources>
